Agregado article y párrafo dentro del article

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="/css/estilos.css" type="text/css">
 </head>
 <body>
-   <h1>Título</h1>
+<h1>Título</h1>
+
+   <article>
+       <p>
+           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident aperiam, modi aliquid ad iste quis ullam pariatur quos nobis totam dolore cum, ex fuga quibusdam quae asperiores corporis incidunt maxime?
+       </p>
+   </article>
 </body>
 </html>
