--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/estilos.css" type="text/css">
 </head>
 <body>
-<h1>Título</h1>
+<h1>MONASTERIO DEL CAPITÁN</h1>
 <p>Párrafo</p>
 </body>
 </html>
