--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitio web</title>
-    <link rel="stylesheet" href="/css/estilos.css" type="text/css">
+    <link rel="stylesheet" href="/CursoGit/css/estilos.css" type="text/css">
 </head>
 <body>
+
 <h1>MONASTERIO DEL CAPITÁN</h1>
 <p>Párrafo</p>
+
 </body>
 </html>
